--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- About -->
     <section class="about" id="about">
         <div class="heading">
-            <h2>Nuestras Aencua</h2>
+            <h2>Nuestras Agencia</h2>
             <span>Introducción</span>
         </div>
         <!-- About Content -->
