--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="bx bx-menu" id="menu-icon"></div>
  
         <ul class="navbar">
-            <li><a href="#home">Inicio</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#about">Nosotros</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#services">Servicios</a></li>
