--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <img src="/image/perfilMagiGil.jpg" alt="">
         </div>
         <div class="home-text">
-            <span>Hola, Soy</span>
+            <span>Groowar</span>
             <h1>Magalí Gil</h1>
             <h2>Digital Agency Manager</h2>
             <p>En GROOWAR somos especialistas en <br> soluciones digitales para <br> su negocio.</p>
