--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
             <li><a href="#services">Servicios</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contacto</a></li>
-            <div class="bx bx-moon" id="darkmode"></div>
+            <li>
+                <div class="bx bx-moon" id="darkmode"></div>
+                <span class="en">English</span>
+                <input type="checkbox" class="check">
+                <span class="es">Espaniol</span>
+            </li>
+
         </ul>
     </header>
     <!-- Home -->
