--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <li><a href="#contact">Contacto</a></li>
             <li>
                 <div class="bx bx-moon" id="darkmode"></div>
-                <span class="en">English</span>
+                <span class="en">En</span>
                 <input type="checkbox" class="check">
-                <span class="es">Espaniol</span>
+                <span class="es">Es</span>
             </li>
 
         </ul>
