Se actualizan css y js en el html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./css/line-icons.css">
     <link rel="stylesheet" href="./css/nivo-lightbox.css">
     <link rel="stylesheet" href="./css/magnific-popup.css">
+     <!-- Selector Idiomas -->
+     <link rel="./css/styleIdioma">
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -244,6 +246,7 @@
     <!-- Link To JS -->
     <script src="./js/script.js"></script>
     <script src="./js/floating-wpp.js"></script>
+    <script src="./js/idioma.js"></script>
 
     <script type="text/javascript">
   
