Se actualiza link rel styleIdioma

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/nivo-lightbox.css">
     <link rel="stylesheet" href="./css/magnific-popup.css">
      <!-- Selector Idiomas -->
-     <link rel="./css/styleIdioma">
+     <link rel="./css/styleIdiom">
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
