--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <link rel="icon" type="image/png" sizes="16x16" href="https://i.ibb.co/tsWdFxw/favicon.png">
     <meta charset="UTF-8">
