Se corrige en html

--- a/en/index.html
+++ b/en/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GROOWAR | Digital Marketing Agency</title>
     <!-- Link To CSS -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- Box Icons -->
     <link rel="stylesheet">
     <!-- Box Whatsapp-->
     <link rel="./css/floating-wpp.css">
-    <link rel="stylesheet" href="./css/line-icons.css">
-    <link rel="stylesheet" href="./css/nivo-lightbox.css">
-    <link rel="stylesheet" href="./css/magnific-popup.css">
+    <link rel="stylesheet" href="../css/line-icons.css">
+    <link rel="stylesheet" href="../css/nivo-lightbox.css">
+    <link rel="stylesheet" href="../css/magnific-popup.css">
      <!-- Selector Idiomas -->
      <link rel="stylesheet" href="../css/styleIdioma.css">
 
@@ -244,8 +244,8 @@
  
  
     <!-- Link To JS -->
-    <script src="./js/script.js"></script>
-    <script src="./js/floating-wpp.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/floating-wpp.js"></script>
     <script src="../js/idioma.js"></script>
 
     <script type="text/javascript">
@@ -270,7 +270,7 @@
 
               backgroundColor: '#4AB641',
 
-              buttonImage: '<img src="./image/whatsapp.svg">'
+              buttonImage: '<img src="../image/whatsapp.svg">'
 
           });
 
