Se traduce en index.html

--- a/en/index.html
+++ b/en/index.html
@@ -33,12 +33,12 @@
         <div class="bx bx-menu" id="menu-icon"></div>
  
         <ul class="navbar">
-            <li><a href="#home">Inicio</a></li>
-            <li><a href="#about">Nosotros</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">Ouers</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#services">Servicios</a></li>
+            <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contacto</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li>
                 <div class="bx bx-moon" id="darkmode"></div>
                 <span class="en">En</span>
@@ -66,7 +66,7 @@
             <span>Groowar</span>
             <h1>Magalí Gil</h1>
             <h2>Digital Agency Manager</h2>
-            <p>En GROOWAR somos especialistas en <br> soluciones digitales para <br> su negocio.</p>
+            <p>EAt GROOWAR we are specialists in <br> digital solutions for <br> your business.</p>
             <a href="#contact" class="btn">Contáctame</a>
         </div>
  
