--- a/en/index.html
+++ b/en/index.html
@@ -60,7 +60,7 @@
 
         </div>
         <div class="home-img">
-            <img src="/image/perfilMagiGil.jpg" alt="">
+            <img src="../image/perfilMagiGil.jpg" alt="">
         </div>
         <div class="home-text">
             <span>Groowar</span>
@@ -80,7 +80,7 @@
         <!-- About Content -->
         <div class="about-container">
             <div class="about-img">
-                <img src="121.jpg" alt="">
+                <img src="../121.jpg" alt="">
             </div>
             <div class="about-text">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis beatae eius quae ab consequatur est perferendis dicta. Ad repellendus perferendis minus sunt error eos dicta enim accusantium ipsum veniam debitis quasi sint cum fugiat porro quam, blanditiis a ratione quod!</p>
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="skills-img">
-                <img src="123.png" alt="">
+                <img src="../123.png" alt="">
             </div>
         </div>
  
@@ -190,22 +190,22 @@
         </div>
         <div class="portfolio-content">
             <div class="portfolio-img">
-                <img src="blog-2.jpg" alt="">
+                <img src="../blog-2.jpg" alt="">
             </div>
             <div class="portfolio-img">
-                <img src="blog-3.jpg" alt="">
+                <img src="../blog-3.jpg" alt="">
             </div>
             <div class="portfolio-img">
-                <img src="blog-4.jpg" alt="">
+                <img src="../blog-4.jpg" alt="">
             </div>
             <div class="portfolio-img">
-                <img src="blog-5.jpg" alt="">
+                <img src="../blog-5.jpg" alt="">
             </div>
             <div class="portfolio-img">
-                <img src="blog-6.jpg" alt="">
+                <img src="../blog-6.jpg" alt="">
             </div>
             <div class="portfolio-img">
-                <img src="blog-7.jpg" alt="">
+                <img src="../blog-7.jpg" alt="">
             </div>
             
         </div>
