Se modifico por checklist

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li>
                 <div class="bx bx-moon" id="darkmode"></div>
                 <span class="es">Es</span>
-                <input type="checkbox" class="check">
+                <input type="checklist" class="check">
                 <span class="en">En</span>
             </li>
 
