--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                 <input type="checkbox" class="check">
                 <span class="en">En</span>
             </li>
+            <li><img src="https://cdn-icons-png.flaticon.com/512/197/197593.png" width="24" >
+                <input type="checkbox" class="check">
+                <img src="https://cdn-icons-png.flaticon.com/512/197/197484.png" width="24" >
+            </li>
 
         </ul>
     </header>
