--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
             <li>
                 <div class="bx bx-moon" id="darkmode"></div>
             </li>
-            <li><img src="https://cdn-icons-png.flaticon.com/512/197/197593.png" width="24" >
-                <input type="checkbox" class="check">
-                <img src="https://cdn-icons-png.flaticon.com/512/197/197484.png" width="24" >
+            <li>
+                <div><img src="https://cdn-icons-png.flaticon.com/512/197/197593.png" width="24" >
+                     <input type="checkbox" class="check">
+                     <img src="https://cdn-icons-png.flaticon.com/512/197/197484.png" width="24" >
+                </div>
             </li>
 
         </ul>
