Se actualiza styleIdioma.css

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="bx bx-moon" id="darkmode"></div>
             </li>
             <li>
-                <div><img src="https://cdn-icons-png.flaticon.com/512/197/197593.png" width="24" >
+                <div class="langCheck"><img src="https://cdn-icons-png.flaticon.com/512/197/197593.png" width="24" >
                      <input type="checkbox" class="check">
                      <img src="https://cdn-icons-png.flaticon.com/512/197/197484.png" width="24" >
                 </div>
