Se corrige idioma.css

--- a/en/index.html
+++ b/en/index.html
@@ -39,7 +39,7 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li>
+            <li class="langCheck">
                 <div class="bx bx-moon" id="darkmode"></div>
                 <span class="es">Es</span>
                 <input type="checkbox" class="check" checked>
