Se corrige html idioma es

--- a/en/index.html
+++ b/en/index.html
@@ -39,11 +39,11 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li class="langCheck">
-                <div class="bx bx-moon" id="darkmode"></div>
-                <span class="es">Es</span>
-                <input type="checkbox" class="check" checked>
-                <span class="en">En</span>
+            <li>
+                <div class="langCheck"><img src="https://cdn-icons-png.flaticon.com/512/197/197593.png" width="24" >
+                     <input type="checkbox" class="check">
+                     <img src="https://cdn-icons-png.flaticon.com/512/197/197484.png" width="24" >
+                </div>
             </li>
 
         </ul>
