Se agrego icon luna

--- a/en/index.html
+++ b/en/index.html
@@ -40,6 +40,9 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
             <li>
+                <div class="bx bx-moon" id="darkmode"></div>
+            </li>
+            <li>
                 <div class="langCheck"><img src="https://cdn-icons-png.flaticon.com/512/197/197593.png" width="24" >
                      <input type="checkbox" class="check" checked>
                      <img src="https://cdn-icons-png.flaticon.com/512/197/197484.png" width="24" >
